# dashamail-python

./: LICENSE  README.md  pyproject.toml  setup.py
dasha_mail/: async.py  exceptions.py  init.py  sync.py
